creates loop that constructs megatrialbank with all paths, pass to child component, and renders stimuli to page

--- a/src/css/splitScreen.css
+++ b/src/css/splitScreen.css
@@ -20,6 +20,9 @@
 .bottom{
   height: 50vh;
   background-color: rgb(255, 245, 136);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 /* Sample Display */
@@ -29,6 +32,12 @@
 
 
 /* Comparison Display */
+
+.comparison-container{
+  display: flex;
+  justify-content: space-around;
+  align-self: center;
+}
 .left{
   width: 12vw;
 }
