formats comparison array

--- a/src/css/splitScreen.css
+++ b/src/css/splitScreen.css
@@ -21,8 +21,7 @@
   height: 50vh;
   background-color: rgb(255, 245, 136);
   display: flex;
-  justify-content: space-around;
-  align-items: center;
+  
 }
 
 /* Sample Display */
@@ -34,6 +33,7 @@
 /* Comparison Display */
 
 .comparison-container{
+  width: 100vw;
   display: flex;
   justify-content: space-around;
   align-self: center;
