--- a/src/css/button.css
+++ b/src/css/button.css
@@ -1,4 +1,4 @@
-.welcome-btn{
+.btn{
   background-color: rgb(255, 204, 0);
   border: none;
   border-radius: 5px;
@@ -9,6 +9,6 @@
   font-size: 16px;
   font-weight: bold;
 }
-.welcome-btn:hover{
+.btn:hover{
   background-color: rgb(255, 217, 64);
 }
