--- a/src/css/splitScreen3.css
+++ b/src/css/splitScreen3.css
@@ -11,7 +11,7 @@
 
 .top {
   height: 50vh;
-  background-color: rgb(154, 216, 255);
+  background-color: white;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -19,7 +19,7 @@
 
 .bottom{
   height: 50vh;
-  background-color: rgb(255, 245, 136);
+  background-color: white;
   display: flex;
   
 }
@@ -38,14 +38,4 @@
   justify-content: space-around;
   align-self: center;
 }
-.left{
-  width: 12vw;
-}
 
-.center{
-  width: 12vw;
-}
-
-.right{
-  width: 12vw;
-}
