adds sizing to comparison stimulus

--- a/src/css/splitScreen2.css
+++ b/src/css/splitScreen2.css
@@ -32,10 +32,10 @@
   align-self: center;
 }
 
-/* .left{
-  width: 12vw;
+.left{
+  width: 15vw;
 }
 
 .right{
-  width: 12vw;
-} */
+  width: 15vw;
+}
