--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,12 +1,6 @@
 * {
   margin: 0;
-  padding: 0;
+  /* padding: 0; */
   border: 0;
   box-sizing: border-box;
-}
-
-ul.home-List {
-  /* if you want the standard bullets, use 'disc' instead of 'circle' */
-  list-style: circle; 
-  list-style-position: inside !important;
 }
