--- a/src/css/counter.css
+++ b/src/css/counter.css
@@ -1,8 +1,19 @@
 .counter-conatainer{
+  width: 100vw;
+  height: 12vh;
+}
+
+.counter{
+  font-size: 50px;
+  padding: 15px;
+  text-align: right;
   display: flex;
   justify-content: flex-end;
 }
 
-.counter{
-  font-size: 24px;
+.count{
+  width: 200px;
+  border: 2px solid rgb(176, 197, 222);
+  border-radius: 5px;
+  padding: 5px;
 }
