--- a/src/css/splitScreenAmts.css
+++ b/src/css/splitScreenAmts.css
@@ -4,7 +4,7 @@
 
 .top {
   height: 50vh;
-  background-color: rgb(255, 154, 210);
+  background-color: white;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -12,7 +12,7 @@
 
 .bottom{
   height: 50vh;
-  background-color: rgb(255, 245, 136);
+  background-color: white;
   display: flex;
   
 }
