--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -1,5 +1,8 @@
 .d-font{
-  font-family: 'Architects Daughter', cursive;
+  font-family: 'Inconsolata', monospace;
+}
+.d-title{
+  font-family: 'Oswald', sans-serif;
 }
 
 .dashboard-body{
@@ -7,17 +10,12 @@
   height: 100vh;
   padding: 5%;
   background-color: #CDD1DB;
-  /* background-image: url(https://images.pexels.com/photos/3109168/pexels-photo-3109168.jpeg); */
-  /* background-image: url(https://images.pexels.com/photos/33085/knowledge-book-library-glasses.jpg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260); */
   background-size: cover;
   position: fixed; 
   overflow-y: scroll;
   top: 0; right: 0; bottom: 0; left: 0; 
 }
 
-/* .dashboard-container{
-  background-color: rgba(255, 255, 255, 0.53);
-} */
 
 .dash-header{
   background-color: rgba(255, 255, 255, 0.53);
@@ -32,7 +30,6 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  /* background-color: rgba(255, 255, 255, 0.53); */
 }
 
 .dash-card{
@@ -50,18 +47,10 @@
   margin: 0 0% 5% 0;
 }
 
-.d-1{
-  /* background-image: url(https://www.searchenginewatch.com/wp-content/uploads/2018/10/ThinkstockPhotos-503426092.jpg); */
-  /* opacity: .66; */
-  /* background-image: url(https://www.flaticon.com/premium-icon/icons/svg/1149/1149039.svg);
-  background-size: 100%;
-  background-repeat: no-repeat; */
-}
-
 .link{
   text-decoration: none;
   color: black;
-  font-family: 'Architects Daughter', cursive;
+  font-family: 'Oswald', sans-serif;
   font-size: 1.75rem;
 }
 
@@ -73,7 +62,6 @@
   width: 50%;
 }
 
-
 .dash-one{
   width: 50%;
 }
@@ -81,8 +69,6 @@
 .dash-home{
   width: 45%;
 }
-
-
 
 a.attribution{
   font-size: 12px;
