--- a/src/css/home.css
+++ b/src/css/home.css
@@ -31,6 +31,13 @@
   color: rgb(83, 140, 109);
 }
 
+.way{
+  text-align: right;
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: rgba(0, 0, 0, 0.475);
+}
+
 .h-body{
   display:flex;
   flex-direction: column;
