--- a/src/css/button.css
+++ b/src/css/button.css
@@ -3,7 +3,7 @@
   border: none;
   border-radius: 5px;
   color: white;
-  padding: 15px 32px;
+  padding: 2% 5%;
   text-align: center;
   text-decoration: none;
   font-size: 16px;
